# claude-tools

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  README.md
.github/workflows/: release.yml
history/: Cargo.toml  README.md  README_zh.md
history/src/: context.rs  get.rs  main.rs  mcp.rs  search.rs  sessions.rs  types.rs  utils.rs
mcp-chrome/: README.md  README_zh.md  TESTING.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
mcp-chrome/extension/: iframe-content.html  manifest.json  package-lock.json  package.json  test-page.html  tsconfig.json  vite.config.ts
mcp-chrome/src/: index.ts
mcp-chrome/src/anti-detection/: behavior.ts  index.ts  injection.ts
mcp-chrome/src/cdp/: client.ts  index.ts  launcher.ts
mcp-chrome/src/core/: auto-wait.ts  browser-driver.ts  error-sanitizer.ts  errors.ts  extension-errors.ts  index.ts  locator.ts  retry.ts  session.ts  types.ts  unified-session.ts  utils.ts
mcp-chrome/test/: ch-regressions.test.js  helpers.js  run-all.js
mcp-claude-history/: .gitignore  Cargo.toml  README.md  README_zh.md  TESTING.md  build.rs
mcp-claude-history/src/: config.rs  context.rs  get.rs  main.rs  mcp.rs  mcp_rmcp.rs  projects.rs  search.rs  sessions.rs  trace.rs  types.rs  utils.rs
mcp-ssh/: .gitignore  LICENSE  README.md  README_zh.md  TESTING.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
mcp-ssh/src/: command-risk.ts  directory-verification.ts  file-ops.ts  forward-manager.ts  index.ts  operation-manager.ts  pty-manager.ts  security.ts  session-manager.ts  ssh-config.ts  transfer-outcome.ts  types.ts
mcp-ssh/test/: forward-manager.test.mjs  operation-manager.test.mjs  pty-manager.test.mjs  run-tests.mjs  session-manager-operation.test.mjs  ssh-regressions.test.mjs
skill-cc-session-fix/: README.md  README_zh.md  SKILL-en.md  SKILL.md
skill-cc-session-fix/references/: known-issues.md  mechanism.md
skill-cc-session-fix/scripts/: diagnose.py  truncate.py
skill-elenchus/: README.md  README_zh.md  SKILL-en.md  SKILL.md
skill-elenchus/examples/: sample-output.md
skill-elenchus/prompts/: elenchus-en.md  elenchus.md  expert-convention.md  expert-design.md  expert-logic.md  expert-perf.md  expert-security.md  shared-rules.md
ssh/: LICENSE  README.md  README_zh.md  package-lock.json  package.json
ssh/src/: index.ts
(+51 files in other folders)
