[package]
name = "mcp-claude-history"
version = "1.0.3"
edition = "2021"
description = "MCP tool for searching Claude Code conversation history"
authors = ["pyro"]
license = "MIT"

[[bin]]
name = "mcp-claude-history"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
base64 = "0.22"
glob = "0.3"

[profile.release]
opt-level = 3
lto = true
strip = true
